Long container names no longer break the page
In the containers page, if the name of a container is too long, the
objects table is no longer visible and the table is out of the screen.
There's a screenshot in the bug itself.

Change-Id: I4b37d04fec462b2b2baad5a3c76db0d0f48e5387
Closes-Bug: 1314145

--- a/openstack_dashboard/static/dashboard/scss/horizon.scss
+++ b/openstack_dashboard/static/dashboard/scss/horizon.scss
@@ -1843,9 +1843,9 @@ $tdHeight:                $smallButtonHeight;
 
 $tableCellPadding:        8px;
 
-$contentTableWidth:       70%;
-$navigationTableWidth:    30%;
 $browserWrapperWidth:     100%;
+$navigationTableWidth:    40%;
+$contentTableWidth:       $browserWrapperWidth - $navigationTableWidth;
 
 /* ResourceBrowser style */
 #browser_wrapper {
@@ -1909,6 +1909,11 @@ $browserWrapperWidth:     100%;
     tbody td {
       border-right: $dataTableBorderWidth solid $dataTableBorderColor;
       background-color: white;
+      &.anchor {
+        word-wrap: break-word;
+        white-space: normal;
+        max-width: 145px;
+      }
     }
   }
   div.content_wrapper {
