--- a/openstack_dashboard/dashboards/project/database_backups/templates/database_backups/details.html
+++ b/openstack_dashboard/dashboards/project/database_backups/templates/database_backups/details.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load i18n sizeformat %}
-{% block title %}{% trans "Backup Detail" %}{% endblock %}
+{% block title %}{% trans "Backup Details" %}{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Backup Detail: ")|add:backup.name %}
+  {% include "horizon/common/_page_header.html" with title=_("Backup Details: ")|add:backup.name %}
 {% endblock page_header %}
 
 {% block main %}
