--- a/openstack_dashboard/dashboards/project/databases/templates/databases/detail.html
+++ b/openstack_dashboard/dashboards/project/databases/templates/databases/detail.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load i18n sizeformat %}
-{% block title %}{% trans "Database Detail" %}{% endblock %}
+{% block title %}{% trans "Database Details" %}{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Database Detail: ")|add:instance.name %}
+  {% include "horizon/common/_page_header.html" with title=_("Database Details: ")|add:instance.name %}
 {% endblock page_header %}
 
 {% block main %}
