Add datastore and version information for backups
We should display the datastore name and datastore
version associated with a backup in the backups
table and the backup details view.

There is already a blueprint to add this information
to the instances table and details view so we have
used the same code and formatting here to ensure
consistency.

Change-Id: I286d430d4d670ee07298495e8f1b78795fa64609
Closes-Bug: #1340366

--- a/openstack_dashboard/dashboards/project/database_backups/templates/database_backups/details.html
+++ b/openstack_dashboard/dashboards/project/database_backups/templates/database_backups/details.html
@@ -21,6 +21,12 @@
         <dd>{{ backup.description|linebreaksbr }}</dd>
         <dt>{% trans "ID" %}</dt>
         <dd>{{ backup.id }}</dd>
+        {% if backup.datastore %}
+            <dt>{% trans "Datastore" %}</dt>
+            <dd>{{ backup.datastore.type }}</dd>
+            <dt>{% trans "Datastore Version" %}</dt>
+            <dd>{{ backup.datastore.version }}</dd>
+        {% endif %}
         <dt>{% trans "Status" %}</dt>
         <dd>{{ backup.status|title }}</dd>
         <dt>{% trans "Backup File Location" %}</dt>
