Display volume size for trove instances
Add volume size (in GB) to the trove databases
table and the database details page

Change-Id: Ia37e99c78cdb95a61772f2fa42c1b7f59a86aad8
Closes-bug: #1340900

--- a/openstack_dashboard/dashboards/project/databases/templates/databases/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/databases/templates/databases/_detail_overview.html
@@ -14,6 +14,10 @@
     <dd>{{ instance.status|title }}</dd>
     <dt>{% trans "RAM" %}</dt>
     <dd>{{ instance.full_flavor.ram|mbformat }}</dd>
+    {% if instance.volume %}
+        <dt>{% trans "Volume Size" %}</dt>
+        <dd>{{ instance.volume.size|diskgbformat }}</dd>
+    {% endif %}
   </dl>
 </div>
 
