Improve display of flavor information for trove
Trove database instances display size / flavor
information in the details view different to
how it is display for a nova instance.

Rearranged the details view to have a 'Specs'
section that contains Flavor, RAM and Volume
Size information

Change-Id: I45b5a78dc80902fa1ef6174ea534ebb06d5c01e3
Closes-Bug: #1340913

--- a/openstack_dashboard/dashboards/project/databases/templates/databases/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/databases/templates/databases/_detail_overview.html
@@ -12,6 +12,15 @@
     <dd>{{ instance.id }}</dd>
     <dt>{% trans "Status" %}</dt>
     <dd>{{ instance.status|title }}</dd>
+  </dl>
+</div>
+
+<div class="specs row-fluid detail">
+  <h4>{% trans "Specs" %}</h4>
+  <hr class="header_rule">
+  <dl>
+    <dt>{% trans "Flavor" %}</dt>
+    <dd>{{ instance.full_flavor.name }}</dd>
     <dt>{% trans "RAM" %}</dt>
     <dd>{{ instance.full_flavor.ram|mbformat }}</dd>
     {% if instance.volume %}
