Trove backup should have link to instance
Modified trove backup details page so that
the ID for the trove instance is a
navigable link

Change-Id: I3a538d901bb3836f3d7d5e27fcefe124069cedcb
Closes-Bug: #1341600

--- a/openstack_dashboard/dashboards/project/database_backups/templates/database_backups/details.html
+++ b/openstack_dashboard/dashboards/project/database_backups/templates/database_backups/details.html
@@ -42,7 +42,10 @@
         <dt>{% trans "Name" %}</dt>
         <dd>{{ instance.name }}</dd>
         <dt>{% trans "ID" %}</dt>
-        <dd>{{ instance.id }}</dd>
+        <dd>
+          {% url 'horizon:project:databases:detail' instance.id as instance_url %}
+          <a href="{{ instance_url }}">{{ instance.id }}</a>
+        </dd>
         <dt>{% trans "Status" %}</dt>
         <dd>{{ instance.status|title }}</dd>
       </dl>
